# arrayser

./: CMakeLists.txt  README.md  ins_arr.c  stackExample.c
Poly/: Poly.h  poly_init.c  poly_main.c
UnionPr/: uinonClient.c  unionFind.c
arrayReader/: ar.c
cmpl/: cmpl.c  cmpl_tmp.h  cmplx.h
f12_03_1/: a.out  stackExample.c
firstStep/: stackStep.c
libs/: Item.h
libs/equalent/: UF.h
libs/stackLib/: Stack.h
queue/: a.out  que.c
sort_choice/: a.out  sortChoice.c
tree/: a.out  threeTmp.c
